REGRESSION(99539): SVG <img> disregards page scale and device scale https://bugs.webkit.org/show_bug.cgi?id=77237 <rdar://problem/10767413>

Reviewed by Simon Fraser.

Rename SVGImageCache::SizeAndZoom to SVGImageCache::SizeAndScales, as it carries more than just zoom now.

Pass the product of the device and page scales through everything that takes a SVGImageCache::SizeAndScales,
using it to inflate the size of the buffer created in lookupOrCreateBitmapImageForRenderer,
and to inflate the destination rectangle passed to SVGImage::draw, which will cause a transformation
on the context being drawn into.

Invalidate the SVGImageCache entry on device/page scale changes in addition to zoom changes.

This patch does not cause SVGImageCache to take into account scale caused by CSS transforms; that is tracked
separately by https://bugs.webkit.org/show_bug.cgi?id=85335.

Tests: svg/as-image/image-respects-deviceScaleFactor.html
       svg/as-image/image-respects-pageScaleFactor.html

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::setContainerSizeForRenderer):
(WebCore::CachedImage::imageSizeForRenderer):
* svg/graphics/SVGImage.cpp:
(WebCore::SVGImage::drawSVGToImageBuffer):
* svg/graphics/SVGImage.h:
* svg/graphics/SVGImageCache.cpp:
(WebCore::SVGImageCache::~SVGImageCache):
(WebCore::SVGImageCache::removeRendererFromCache):
(WebCore::SVGImageCache::setRequestedSizeAndScales):
(WebCore::SVGImageCache::requestedSizeAndScales):
(WebCore::SVGImageCache::redraw):
(WebCore::SVGImageCache::lookupOrCreateBitmapImageForRenderer):
* svg/graphics/SVGImageCache.h:
(WebCore::SVGImageCache::SizeAndScales::SizeAndScales):
(SizeAndScales):
(SVGImageCache):
(WebCore::SVGImageCache::ImageData::ImageData):
(ImageData):

Add tests ensuring that SVG used via <img> respects deviceScaleFactor and pageScaleFactor.

* platform/chromium-linux/svg/as-image/image-respects-pageScaleFactor-expected.txt: Added.
* platform/chromium-linux/svg/as-image/image-respects-pageScaleFactor-expected.png: Added.
* platform/chromium/test_expectations.txt:
* platform/qt/Skipped:
* platform/mac/svg/as-image/image-respects-deviceScaleFactor-expected.png: Added.
* platform/mac/svg/as-image/image-respects-deviceScaleFactor-expected.txt: Added.
* platform/mac/svg/as-image/image-respects-pageScaleFactor-expected.png: Added.
* platform/mac/svg/as-image/image-respects-pageScaleFactor-expected.txt: Added.
* platform/efl/Skipped:
* svg/as-image/image-respects-deviceScaleFactor.html: Added.
* svg/as-image/image-respects-pageScaleFactor.html: Added.


Canonical link: https://commits.webkit.org/103075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116001 268f45cc-cd09-0410-ab3c-d52691b4dbfc