Source/WebCore/svg/graphics/SVGImageCache.h
@@ -44,26 +44,29 @@ public:
         return adoptPtr(new SVGImageCache(image));
     }
 
-    struct SizeAndZoom {
-        SizeAndZoom()
+    struct SizeAndScales {
+        SizeAndScales()
             : zoom(1)
+            , scale(1)
         {
         }
 
-        SizeAndZoom(const IntSize& newSize, float newZoom)
+        SizeAndScales(const IntSize& newSize, float newZoom, float newScale)
             : size(newSize)
             , zoom(newZoom)
+            , scale(newScale)
         {
         }
 
         IntSize size;
         float zoom;
+        float scale;
     };
 
     void removeRendererFromCache(const RenderObject*);
 
-    void setRequestedSizeAndZoom(const RenderObject*, const SizeAndZoom&);
-    SizeAndZoom requestedSizeAndZoom(const RenderObject*) const;
+    void setRequestedSizeAndScales(const RenderObject*, const SizeAndScales&);
+    SizeAndScales requestedSizeAndScales(const RenderObject*) const;
 
     Image* lookupOrCreateBitmapImageForRenderer(const RenderObject*);
     void imageContentChanged();
@@ -80,26 +83,26 @@ private:
         {
         }
 
-        ImageData(ImageBuffer* newBuffer, PassRefPtr<Image> newImage, const SizeAndZoom& newSizeAndZoom)
+        ImageData(ImageBuffer* newBuffer, PassRefPtr<Image> newImage, const SizeAndScales& newSizeAndScales)
             : imageNeedsUpdate(false)
-            , sizeAndZoom(newSizeAndZoom)
+            , sizeAndScales(newSizeAndScales)
             , buffer(newBuffer)
             , image(newImage)
         {
         }
 
         bool imageNeedsUpdate;
-        SizeAndZoom sizeAndZoom;
+        SizeAndScales sizeAndScales;
 
         ImageBuffer* buffer;
         RefPtr<Image> image;
     };
 
-    typedef HashMap<const RenderObject*, SizeAndZoom> SizeAndZoomMap;
+    typedef HashMap<const RenderObject*, SizeAndScales> SizeAndScalesMap;
     typedef HashMap<const RenderObject*, ImageData> ImageDataMap;
 
     SVGImage* m_svgImage;
-    SizeAndZoomMap m_sizeAndZoomMap;
+    SizeAndScalesMap m_sizeAndScalesMap;
     ImageDataMap m_imageDataMap;
     Timer<SVGImageCache> m_redrawTimer;
 };
